src/main/resources/parsing/FormulogParser.cpp

// Generated from Formulog.g4 by ANTLR 4.7.1


#include "FormulogVisitor.h"

#include "FormulogParser.h"


using namespace antlrcpp;
using namespace antlr4;

FormulogParser::FormulogParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FormulogParser::~FormulogParser() {
  delete _interpreter;
}

std::string FormulogParser::getGrammarFileName() const {
  return "Formulog.g4";
}

const std::vector<std::string>& FormulogParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FormulogParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

FormulogParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FormulogParser::ProgContext::EOF() {
  return getToken(FormulogParser::EOF, 0);
}

std::vector<FormulogParser::MetadataContext *> FormulogParser::ProgContext::metadata() {
  return getRuleContexts<FormulogParser::MetadataContext>();
}

FormulogParser::MetadataContext* FormulogParser::ProgContext::metadata(size_t i) {
  return getRuleContext<FormulogParser::MetadataContext>(i);
}

std::vector<FormulogParser::StmtContext *> FormulogParser::ProgContext::stmt() {
  return getRuleContexts<FormulogParser::StmtContext>();
}

FormulogParser::StmtContext* FormulogParser::ProgContext::stmt(size_t i) {
  return getRuleContext<FormulogParser::StmtContext>(i);
}


size_t FormulogParser::ProgContext::getRuleIndex() const {
  return FormulogParser::RuleProg;
}

antlrcpp::Any FormulogParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

FormulogParser::ProgContext* FormulogParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, FormulogParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FormulogParser::T__1)
      | (1ULL << FormulogParser::T__3)
      | (1ULL << FormulogParser::T__4)
      | (1ULL << FormulogParser::T__7)
      | (1ULL << FormulogParser::T__10)
      | (1ULL << FormulogParser::T__14)
      | (1ULL << FormulogParser::T__17)
      | (1ULL << FormulogParser::T__18)
      | (1ULL << FormulogParser::T__19)
      | (1ULL << FormulogParser::T__22)
      | (1ULL << FormulogParser::T__23)
      | (1ULL << FormulogParser::T__24)
      | (1ULL << FormulogParser::T__26)
      | (1ULL << FormulogParser::T__29)
      | (1ULL << FormulogParser::T__31)
      | (1ULL << FormulogParser::T__32)
      | (1ULL << FormulogParser::NOT)
      | (1ULL << FormulogParser::INPUT)
      | (1ULL << FormulogParser::OUTPUT)
      | (1ULL << FormulogParser::FP32_NAN)
      | (1ULL << FormulogParser::FP32_POS_INFINITY)
      | (1ULL << FormulogParser::FP32_NEG_INFINITY)
      | (1ULL << FormulogParser::FP64_NAN)
      | (1ULL << FormulogParser::FP64_POS_INFINITY)
      | (1ULL << FormulogParser::FP64_NEG_INFINITY)
      | (1ULL << FormulogParser::XVAR)
      | (1ULL << FormulogParser::VAR)
      | (1ULL << FormulogParser::INT)
      | (1ULL << FormulogParser::HEX)
      | (1ULL << FormulogParser::FP32)
      | (1ULL << FormulogParser::FP64)
      | (1ULL << FormulogParser::I64))) != 0) || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (FormulogParser::MINUS - 65))
      | (1ULL << (FormulogParser::BANG - 65))
      | (1ULL << (FormulogParser::FORALL - 65))
      | (1ULL << (FormulogParser::EXISTS - 65))
      | (1ULL << (FormulogParser::HOLE - 65))
      | (1ULL << (FormulogParser::XID - 65))
      | (1ULL << (FormulogParser::ID - 65))
      | (1ULL << (FormulogParser::QSTRING - 65)))) != 0)) {
      setState(72);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case FormulogParser::T__1:
        case FormulogParser::T__3:
        case FormulogParser::T__4:
        case FormulogParser::T__17:
        case FormulogParser::INPUT:
        case FormulogParser::OUTPUT: {
          setState(70);
          metadata();
          break;
        }

        case FormulogParser::T__7:
        case FormulogParser::T__10:
        case FormulogParser::T__14:
        case FormulogParser::T__18:
        case FormulogParser::T__19:
        case FormulogParser::T__22:
        case FormulogParser::T__23:
        case FormulogParser::T__24:
        case FormulogParser::T__26:
        case FormulogParser::T__29:
        case FormulogParser::T__31:
        case FormulogParser::T__32:
        case FormulogParser::NOT:
        case FormulogParser::FP32_NAN:
        case FormulogParser::FP32_POS_INFINITY:
        case FormulogParser::FP32_NEG_INFINITY:
        case FormulogParser::FP64_NAN:
        case FormulogParser::FP64_POS_INFINITY:
        case FormulogParser::FP64_NEG_INFINITY:
        case FormulogParser::XVAR:
        case FormulogParser::VAR:
        case FormulogParser::INT:
        case FormulogParser::HEX:
        case FormulogParser::FP32:
        case FormulogParser::FP64:
        case FormulogParser::I64:
        case FormulogParser::MINUS:
        case FormulogParser::BANG:
        case FormulogParser::FORALL:
        case FormulogParser::EXISTS:
        case FormulogParser::HOLE:
        case FormulogParser::XID:
        case FormulogParser::ID:
        case FormulogParser::QSTRING: {
          setState(71);
          stmt();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    match(FormulogParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TsvFileContext ------------------------------------------------------------------

FormulogParser::TsvFileContext::TsvFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FormulogParser::TsvFileContext::EOF() {
  return getToken(FormulogParser::EOF, 0);
}

std::vector<FormulogParser::TabSeparatedTermLineContext *> FormulogParser::TsvFileContext::tabSeparatedTermLine() {
  return getRuleContexts<FormulogParser::TabSeparatedTermLineContext>();
}

FormulogParser::TabSeparatedTermLineContext* FormulogParser::TsvFileContext::tabSeparatedTermLine(size_t i) {
  return getRuleContext<FormulogParser::TabSeparatedTermLineContext>(i);
}


size_t FormulogParser::TsvFileContext::getRuleIndex() const {
  return FormulogParser::RuleTsvFile;
}

antlrcpp::Any FormulogParser::TsvFileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitTsvFile(this);
  else
    return visitor->visitChildren(this);
}

FormulogParser::TsvFileContext* FormulogParser::tsvFile() {
  TsvFileContext *_localctx = _tracker.createInstance<TsvFileContext>(_ctx, getState());
  enterRule(_localctx, 2, FormulogParser::RuleTsvFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FormulogParser::T__7)
      | (1ULL << FormulogParser::T__10)
      | (1ULL << FormulogParser::T__14)
      | (1ULL << FormulogParser::T__19)
      | (1ULL << FormulogParser::T__22)
      | (1ULL << FormulogParser::T__23)
      | (1ULL << FormulogParser::T__24)
      | (1ULL << FormulogParser::T__26)
      | (1ULL << FormulogParser::T__29)
      | (1ULL << FormulogParser::T__31)
      | (1ULL << FormulogParser::T__32)
      | (1ULL << FormulogParser::NOT)
      | (1ULL << FormulogParser::FP32_NAN)
      | (1ULL << FormulogParser::FP32_POS_INFINITY)
      | (1ULL << FormulogParser::FP32_NEG_INFINITY)
      | (1ULL << FormulogParser::FP64_NAN)
      | (1ULL << FormulogParser::FP64_POS_INFINITY)
      | (1ULL << FormulogParser::FP64_NEG_INFINITY)
      | (1ULL << FormulogParser::XVAR)
      | (1ULL << FormulogParser::VAR)
      | (1ULL << FormulogParser::INT)
      | (1ULL << FormulogParser::HEX)
      | (1ULL << FormulogParser::FP32)
      | (1ULL << FormulogParser::FP64)
      | (1ULL << FormulogParser::I64))) != 0) || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (FormulogParser::MINUS - 65))
      | (1ULL << (FormulogParser::BANG - 65))
      | (1ULL << (FormulogParser::FORALL - 65))
      | (1ULL << (FormulogParser::EXISTS - 65))
      | (1ULL << (FormulogParser::HOLE - 65))
      | (1ULL << (FormulogParser::NEWLINE - 65))
      | (1ULL << (FormulogParser::XID - 65))
      | (1ULL << (FormulogParser::ID - 65))
      | (1ULL << (FormulogParser::QSTRING - 65)))) != 0)) {
      setState(79);
      tabSeparatedTermLine();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    match(FormulogParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TabSeparatedTermLineContext ------------------------------------------------------------------

FormulogParser::TabSeparatedTermLineContext::TabSeparatedTermLineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FormulogParser::TabSeparatedTermLineContext::NEWLINE() {
  return getToken(FormulogParser::NEWLINE, 0);
}

std::vector<FormulogParser::TermContext *> FormulogParser::TabSeparatedTermLineContext::term() {
  return getRuleContexts<FormulogParser::TermContext>();
}

FormulogParser::TermContext* FormulogParser::TabSeparatedTermLineContext::term(size_t i) {
  return getRuleContext<FormulogParser::TermContext>(i);
}

std::vector<tree::TerminalNode *> FormulogParser::TabSeparatedTermLineContext::TAB() {
  return getTokens(FormulogParser::TAB);
}

tree::TerminalNode* FormulogParser::TabSeparatedTermLineContext::TAB(size_t i) {
  return getToken(FormulogParser::TAB, i);
}


size_t FormulogParser::TabSeparatedTermLineContext::getRuleIndex() const {
  return FormulogParser::RuleTabSeparatedTermLine;
}

antlrcpp::Any FormulogParser::TabSeparatedTermLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitTabSeparatedTermLine(this);
  else
    return visitor->visitChildren(this);
}

FormulogParser::TabSeparatedTermLineContext* FormulogParser::tabSeparatedTermLine() {
  TabSeparatedTermLineContext *_localctx = _tracker.createInstance<TabSeparatedTermLineContext>(_ctx, getState());
  enterRule(_localctx, 4, FormulogParser::RuleTabSeparatedTermLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FormulogParser::T__7)
      | (1ULL << FormulogParser::T__10)
      | (1ULL << FormulogParser::T__14)
      | (1ULL << FormulogParser::T__19)
      | (1ULL << FormulogParser::T__22)
      | (1ULL << FormulogParser::T__23)
      | (1ULL << FormulogParser::T__24)
      | (1ULL << FormulogParser::T__26)
      | (1ULL << FormulogParser::T__29)
      | (1ULL << FormulogParser::T__31)
      | (1ULL << FormulogParser::T__32)
      | (1ULL << FormulogParser::NOT)
      | (1ULL << FormulogParser::FP32_NAN)
      | (1ULL << FormulogParser::FP32_POS_INFINITY)
      | (1ULL << FormulogParser::FP32_NEG_INFINITY)
      | (1ULL << FormulogParser::FP64_NAN)
      | (1ULL << FormulogParser::FP64_POS_INFINITY)
      | (1ULL << FormulogParser::FP64_NEG_INFINITY)
      | (1ULL << FormulogParser::XVAR)
      | (1ULL << FormulogParser::VAR)
      | (1ULL << FormulogParser::INT)
      | (1ULL << FormulogParser::HEX)
      | (1ULL << FormulogParser::FP32)
      | (1ULL << FormulogParser::FP64)
      | (1ULL << FormulogParser::I64))) != 0) || ((((_la - 65) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 65)) & ((1ULL << (FormulogParser::MINUS - 65))
      | (1ULL << (FormulogParser::BANG - 65))
      | (1ULL << (FormulogParser::FORALL - 65))
      | (1ULL << (FormulogParser::EXISTS - 65))
      | (1ULL << (FormulogParser::HOLE - 65))
      | (1ULL << (FormulogParser::XID - 65))
      | (1ULL << (FormulogParser::ID - 65))
      | (1ULL << (FormulogParser::QSTRING - 65)))) != 0)) {
      setState(87);
      term(0);
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == FormulogParser::TAB) {
        setState(88);
        match(FormulogParser::TAB);
        setState(89);
        term(0);
        setState(94);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(97);
    match(FormulogParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MetadataContext ------------------------------------------------------------------

FormulogParser::MetadataContext::MetadataContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t FormulogParser::MetadataContext::getRuleIndex() const {
  return FormulogParser::RuleMetadata;
}

void FormulogParser::MetadataContext::copyFrom(MetadataContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UninterpSortDeclContext ------------------------------------------------------------------

FormulogParser::TypeDefLHSContext* FormulogParser::UninterpSortDeclContext::typeDefLHS() {
  return getRuleContext<FormulogParser::TypeDefLHSContext>(0);
}

FormulogParser::UninterpSortDeclContext::UninterpSortDeclContext(MetadataContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FormulogParser::UninterpSortDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitUninterpSortDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RelDeclContext ------------------------------------------------------------------

tree::TerminalNode* FormulogParser::RelDeclContext::ID() {
  return getToken(FormulogParser::ID, 0);
}

FormulogParser::TypeListContext* FormulogParser::RelDeclContext::typeList() {
  return getRuleContext<FormulogParser::TypeListContext>(0);
}

tree::TerminalNode* FormulogParser::RelDeclContext::INPUT() {
  return getToken(FormulogParser::INPUT, 0);
}

tree::TerminalNode* FormulogParser::RelDeclContext::OUTPUT() {
  return getToken(FormulogParser::OUTPUT, 0);
}

std::vector<FormulogParser::AnnotationContext *> FormulogParser::RelDeclContext::annotation() {
  return getRuleContexts<FormulogParser::AnnotationContext>();
}

FormulogParser::AnnotationContext* FormulogParser::RelDeclContext::annotation(size_t i) {
  return getRuleContext<FormulogParser::AnnotationContext>(i);
}

FormulogParser::RelDeclContext::RelDeclContext(MetadataContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FormulogParser::RelDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitRelDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UninterpFunDeclContext ------------------------------------------------------------------

FormulogParser::ConstructorTypeContext* FormulogParser::UninterpFunDeclContext::constructorType() {
  return getRuleContext<FormulogParser::ConstructorTypeContext>(0);
}

FormulogParser::TypeContext* FormulogParser::UninterpFunDeclContext::type() {
  return getRuleContext<FormulogParser::TypeContext>(0);
}

FormulogParser::UninterpFunDeclContext::UninterpFunDeclContext(MetadataContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FormulogParser::UninterpFunDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitUninterpFunDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunDeclContext ------------------------------------------------------------------

FormulogParser::FunDefsContext* FormulogParser::FunDeclContext::funDefs() {
  return getRuleContext<FormulogParser::FunDefsContext>(0);
}

FormulogParser::FunDeclContext::FunDeclContext(MetadataContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FormulogParser::FunDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitFunDecl(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeAliasContext ------------------------------------------------------------------

FormulogParser::TypeDefLHSContext* FormulogParser::TypeAliasContext::typeDefLHS() {
  return getRuleContext<FormulogParser::TypeDefLHSContext>(0);
}

tree::TerminalNode* FormulogParser::TypeAliasContext::EQ() {
  return getToken(FormulogParser::EQ, 0);
}

FormulogParser::TypeContext* FormulogParser::TypeAliasContext::type() {
  return getRuleContext<FormulogParser::TypeContext>(0);
}

FormulogParser::TypeAliasContext::TypeAliasContext(MetadataContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FormulogParser::TypeAliasContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitTypeAlias(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeDeclContext ------------------------------------------------------------------

std::vector<FormulogParser::TypeDefLHSContext *> FormulogParser::TypeDeclContext::typeDefLHS() {
  return getRuleContexts<FormulogParser::TypeDefLHSContext>();
}

FormulogParser::TypeDefLHSContext* FormulogParser::TypeDeclContext::typeDefLHS(size_t i) {
  return getRuleContext<FormulogParser::TypeDefLHSContext>(i);
}

std::vector<tree::TerminalNode *> FormulogParser::TypeDeclContext::EQ() {
  return getTokens(FormulogParser::EQ);
}

tree::TerminalNode* FormulogParser::TypeDeclContext::EQ(size_t i) {
  return getToken(FormulogParser::EQ, i);
}

std::vector<FormulogParser::TypeDefRHSContext *> FormulogParser::TypeDeclContext::typeDefRHS() {
  return getRuleContexts<FormulogParser::TypeDefRHSContext>();
}

FormulogParser::TypeDefRHSContext* FormulogParser::TypeDeclContext::typeDefRHS(size_t i) {
  return getRuleContext<FormulogParser::TypeDefRHSContext>(i);
}

FormulogParser::TypeDeclContext::TypeDeclContext(MetadataContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FormulogParser::TypeDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FormulogVisitor*>(visitor))
    return parserVisitor->visitTypeDecl(this);
  else
    return visitor->visitChildren(this);
}
FormulogParser::MetadataContext* FormulogParser::metadata() {
  MetadataContext *_localctx = _tracker.createInstance<MetadataContext>(_ctx, getState());
  enterRule(_localctx, 6, FormulogParser::RuleMetadata);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(153);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<MetadataContext *>(_tracker.createInstance<FormulogParser::FunDeclContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(99);
      funDefs();
      setState(101);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FormulogParser::T__0) {
        setState(100);
        match(FormulogParser::T__0);
      }
      break;
    }

    case 2: {
      _localctx = dynamic_cast<MetadataContext *>(_tracker.createInstance<FormulogParser::RelDeclContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(106);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == FormulogParser::T__17) {
        setState(103);
        annotation();
        setState(108);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(109);
      dynamic_cast<RelDeclContext *>(_localctx)->relType = _input->LT(1);
      _la = _input->LA(1);
      if (!(_la == FormulogParser::INPUT

      || _la == FormulogParser::OUTPUT)) {
        dynamic_cast<RelDeclContext *>(_localctx)->relType = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(110);
      match(FormulogParser::ID);
      setState(111);
      typeList();
      setState(113);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FormulogParser::T__0) {
        setState(112);
        match(FormulogParser::T__0);
      }
      break;
    }

    case 3: {
      _localctx = dynamic_cast<MetadataContext *>(_tracker.createInstance<FormulogParser::TypeAliasContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(115);
      match(FormulogParser::T__1);
      setState(116);
      typeDefLHS();
      setState(117);
      match(FormulogParser::EQ);
      setState(118);
      type();
      setState(120);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FormulogParser::T__0) {
        setState(119);
        match(FormulogParser::T__0);
      }
      break;
    }

    case 4: {
      _localctx = dynamic_cast<MetadataContext *>(_tracker.createInstance<FormulogParser::TypeDeclContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(122);
      match(FormulogParser::T__1);
      setState(123);
      typeDefLHS();
      setState(124);
      match(FormulogParser::EQ);
      setState(125);
      typeDefRHS();
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == FormulogParser::T__2) {
        setState(126);
        match(FormulogParser::T__2);
        setState(127);
        typeDefLHS();
        setState(128);
        match(FormulogParser::EQ);
        setState(129);
        typeDefRHS();
        setState(135);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(137);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == FormulogParser::T__0) {
        setState(136);
        match(FormulogParser::T__0);
      }
      break;
    }

    case 5: {
      _localctx = dynamic_cast<MetadataContext *>(_tracker.createInstance<FormulogParser::UninterpFunDeclContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(139);
      match(FormulogParser::T__3);
      setState(140);
      match(FormulogParser::T__4);
      setState(141);
      constructorType();
      setState(142);
      match(FormulogParser::T__5);
      setState(143);
      type();
      setState(145);
      _errHandler->sync(this);
